# IBKR-Telegram

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  config.example.yaml  docker-compose.example.yml  pyproject.toml
.github/workflows/: auto-tag.yml  ci.yml  docker-publish.yml  dockerhub-description.yml  release.yml  tests.yml
src/: __init__.py  __main__.py  app.py  bot.py  config.py  db.py  executor.py  models.py  safety.py  webhook.py
tests/: test_app.py  test_bot.py  test_config.py  test_db.py  test_executor.py  test_main.py  test_safety.py  test_webhook.py
